--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 
         <article class="contact-form">
           <div class="grid_16">
-              <h2>Contact Form</h2><br>
+              <h2>Contact Form</h2>
 
               <form action="https://docs.google.com/spreadsheet/formResponse?formkey=dDZ3dGNNLVFBTjR4bktTNGhQVEFfa3c6MA&amp;if q" method="POST">
                   <div class="grid_16">
@@ -106,9 +106,9 @@
         <article class="contact-info">
           <div class="grid_8">
               <h2>Contact Info</h2>
-              <ul><li>Ivonne Chen</li>
-                  <li>No.64, Sec 2, Zhinan Rd.<br>Wenshan Dist., Taipei City 116</li>
-                  <li>02-2939-3091</li>
+              <ul><li id="name">Ivonne Chen</li>
+                  <li><i class="fa fa-map-marker fa-lg"></i>No.64, Sec 2, Zhinan Rd.<br>Wenshan Dist., Taipei City 116</li>
+                  <li><i class="fa fa-phone fa-lg"></i>02-2939-3091</li>
               </ul>
           </div>
         </article>
