--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-TW", "en">
 <head>
   <meta charset="UTF-8">
   <title>Ivonne Chen</title>
-  <link rel="site icon" href="favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="960_24_col.css">
   <link href='http://fonts.googleapis.com/css?family=Gudea:400,700' rel='stylesheet' type='text/css'>
@@ -18,9 +18,9 @@
       <nav>
         <div class="container_24">
           <ul class="nav">
-            <li><a href="index.html" class="profile"><i class="fa fa-user fa-2x"></i><span>Profile</span></a></li>
-            <li><a href="resume.html" class="resume"><i class="fa fa-list-ul fa-2x"></i><span>Resume</span></a></li>
-            <li><a href="contact.html" class="contact"><i class="fa fa-envelope fa-2x"></i><span>Contact</span></a></li></li>
+            <li><a href="index.html" class="profile"><i class="fa fa-user fa-2x"></i>Profile</a></li>
+            <li><a href="resume.html" class="resume"><i class="fa fa-list-ul fa-2x"></i>Resume</a></li>
+            <li><a href="contact.html" class="contact"><i class="fa fa-envelope fa-2x"></i>Contact</a></li></li>
           </ul>
         </div>
       </nav>
@@ -38,7 +38,7 @@
     
     <article class="introduction">
         <div class="grid_15">
-           <span><h1>Hello! My name is Ivonne Chen.</h1></span><br> I am a junior in National ChengChi University, majored in Business Administration and double-majored in Digital Contents and Technologies.<br> I'm highly interested in <span>graphical design</span> and <span>interactive digital art</span>. I also enjoy cooking, jogging and guitaring. Currently, I'm learning front-end web design and exploring mobile application development. <!-- I think "guitaring" is not a formal word but it looks pretty cool.-->
+           <h1><span>Hello! My name is Ivonne Chen.</span></h1><br> I am a junior in National ChengChi University, majored in Business Administration and double-majored in Digital Contents and Technologies.<br> I'm highly interested in <span>graphical design</span> and <span>interactive digital art</span>. I also enjoy cooking, jogging and guitaring. Currently, I'm learning front-end web design and exploring mobile application development. <!-- I think "guitaring" is not a formal word but it looks pretty cool.-->
            </div>
         <div class="grid_15">
           <div class="btn">
