--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-TW", "en">
 <head>
   <meta charset="UTF-8">
   <title>Ivonne Chen</title>
-  <link rel="site icon" href="favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="960_24_col.css">
   <link href='http://fonts.googleapis.com/css?family=Gudea:400,700' rel='stylesheet' type='text/css'>
@@ -18,9 +18,9 @@
       <nav>
         <div class="container_24">
           <ul class="nav">
-            <li><a href="index.html" class="profile"><i class="fa fa-user fa-2x"></i><span>Profile</span></a></li>
-            <li><a href="resume.html" class="resume"><i class="fa fa-list-ul fa-2x"></i><span>Resume</span></a></li>
-            <li><a href="contact.html" class="contact"><i class="fa fa-envelope fa-2x"></i><span>Contact</span></a></li></li>
+            <li><a href="index.html" class="profile"><i class="fa fa-user fa-2x"></i>Profile</a></li>
+            <li><a href="resume.html" class="resume"><i class="fa fa-list-ul fa-2x"></i>Resume</a></li>
+            <li><a href="contact.html" class="contact"><i class="fa fa-envelope fa-2x"></i>Contact</a></li></li>
           </ul>
         </div>
       </nav>
