--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-TW", "en">
+<html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
   <title>Ivonne Chen</title>
@@ -20,7 +20,7 @@
           <ul class="nav">
             <li><a href="index.html" class="profile"><i class="fa fa-user fa-2x"></i>Profile</a></li>
             <li><a href="resume.html" class="resume"><i class="fa fa-list-ul fa-2x"></i>Resume</a></li>
-            <li><a href="contact.html" class="contact"><i class="fa fa-envelope fa-2x"></i>Contact</a></li></li>
+            <li><a href="contact.html" class="contact"><i class="fa fa-envelope fa-2x"></i>Contact</a></li>
           </ul>
         </div>
       </nav>
