validation, ul can not be child of h4

--- a/resume.html
+++ b/resume.html
@@ -38,11 +38,11 @@
           <div class="grid_19">
             <div class="grid_13 suffix_1 alpha"><h3 class="Title">Bachelor of Business Administration, Department of Business Administration</h3>
                                  <h3 class="Agency">National Chengchi University (NCCU)</h3>
-                                 <h4 class="description">
+                                 <div class="description">
                                  <ul><li>Double Major: Bachelor of Science, Program in Digital Content and Technologies</li>
                                      <li>English Taught Program, College of Commerce</li>
                                      <li>Marketing Program</li>
-                                 </ul></h4>
+                                 </ul></div>
             </div>
             <div class="grid_5 omega"><h3 class="duration">Expected Jun 2015</h3></div>
           </div>
@@ -55,23 +55,23 @@
             <div class="grid_13 suffix_1 alpha">
                                  <h3 class="Title">Graphic Designer</h3>
                                  <h3 class="Agency">Department of Business Administration & MBA Program, NCCU</h3>
-                                 <h4 class="description">
+                                 <div class="description">
                                  <ul><li>Design visually-relevant posters and banners for B.A. CEO Forums, based on diverse topics and subtopics</li>
                                      <li>Design invitations, magazine advertisements and posters for MBA 50th anniversary</li>
                                      <li>Consult directly with chairperson of department, professors, departmental secretary and printing plant to ensure design quality</li>
-                                 </ul></h4>
+                                 </ul></div>
             </div>
             <div class="grid_5 omega"><h3 class="duration">Jun 2012－Present</h3></div>
 
             <div class="grid_13 suffix_1 alpha">
                                  <h3 class="Title">Intern</h3>
                                  <h3 class="Agency">Living Lab, Digital Art Center, NCCU</h3>
-                                 <h4 class="description">
+                                 <div class="description">
                                  <ul><li>Develop interaction games using C#, unity3D and Arduino</li>
                                      <li>Formulate project plan with team to ensure efficiency</li>
                                      <li>Tune schedule periodically to correspond with progress and provide flexibility</li>
                                      <li>Conduct digital art exhibitions of 250 visitors, with team consisting of 15 members</li>
-                                 </ul></h4>
+                                 </ul></div>
             </div>
             <div class="grid_5 omega"><h3 class="duration">Sep 2013－Present</h3></div>
           </div>
@@ -83,11 +83,11 @@
           <div class="grid_19">
             <div class="grid_13 suffix_1 alpha"><h3 class="Title">CMO</h3>
                                  <h3 class="Agency">22nd BOSS Camp, Department of Business Administration, NCCU</h3>
-                                 <h4 class="description">
+                                 <div class="description">
                                  <ul><li>Design and maintain official website</li>
                                      <li>Direct marketing team to enhance content quality of official Facebook page; improve advertisement reach rate growth by over 300%</li>
                                      <li>Strengthen marketing strategy and advertisement schedule; significantly increase the number of enrolled participants by 150%</li>
-                                 </ul></h4>
+                                 </ul></div>
             </div>
             <div class="grid_5 omega"><h3 class="duration">Jun 2012—May 2013</h3></div>
           </div>
@@ -97,39 +97,39 @@
           <div class="grid_5"><h2>Skills</h2></div>
           <div class="grid_19">
             <div class="grid_5 alpha"><h3 class="skill-catogory">Graphic Design</h3></div>
-              <div class="grid_12 omega"><h4 class="gra-design">
+              <div class="grid_12 omega"><div class="gra-design">
                                  <ul><li>Adobe Photoshop</li>
                                      <li>Illustrator</li>
                                      <li>BBS Art</li>
-                                 </ul></h4>
+                                 </ul></div>
               </div>
 
             <div class="grid_5 alpha"><h3 class="skill-catogory">New Media Art Design</h3></div>
-              <div class="grid_12 omega"><h4 class="new-media-art">
+              <div class="grid_12 omega"><div class="new-media-art">
                                  <ul><li>Unity3D</li>
                                      <li>Resolume</li>
                                      <li>Adobe After Effects</li>
                                      <li>Arduino</li>
-                                 </ul></h4>
+                                 </ul></div>
             </div>
 
             <div class="grid_5 alpha"><h3 class="skill-catogory">Programming</h3></div>
-              <div class="grid_12 omega"><h4 class="programming">
+              <div class="grid_12 omega"><div class="programming">
                                  <ul><li>HTML5</li>
                                      <li>CSS3</li>
                                      <li>C#</li>
                                      <li>SQL</li>
                                      <li>Java</li>
-                                 </ul></h4>
+                                 </ul></div>
             </div>
 
             <div class="grid_5 alpha"><h3 class="skill-catogory">Language Proficiency</h3></div>
-              <div class="grid_12 omega"><h4 class="language">
+              <div class="grid_12 omega"><div class="language">
                                  <ul><li>Chinese Mandarin</li>
                                      <li>Taiwanese</li>
                                      <li>English</li>
                                      <li>Italian</li>
-                                 </ul></h4>
+                                 </ul></div>
             </div>
 
           </div>
@@ -140,20 +140,20 @@
           <div class="grid_19">
             <div class="grid_13 suffix_1 alpha"><h3 class="Title">Leader of Activities Section</h3>
                                  <h3 class="Agency">NCCU Guitar Club</h3>
-                                 <h4 class="description">
+                                 <div class="description">
                                  <ul><li>Plan and perform on guitar concerts with over 500 audience</li>
                                      <li>Lead a host team of 30 members</li>
-                                 </ul></h4>
+                                 </ul></div>
             </div>
             <div class="grid_5 omega"><h3 class="duration">Jun 2012—May 2013</h3></div>
 
             <div class="grid_13 suffix_1 alpha"><h3 class="Title">Front-end Designer</h3>
                                  <h3 class="Agency">Starstar Team, TKU Hackathon 2014</h3>
-                                 <h4 class="description">
+                                 <div class="description">
                                  <ul><li>Co-develop a mobile messaging App "TKU CHAT" for TamKang University</li>
                                      <li>Design App UI; develop a site version for the App</li>
                                      <li>Win 2nd place in the 30-hour-competition</li>
-                                 </ul></h4>
+                                 </ul></div>
             </div>
             <div class="grid_5 omega"><h3 class="duration">March 2014</h3></div>
           </div>
@@ -164,10 +164,10 @@
           <div class="grid_19">
             <div class="grid_13 suffix_1 alpha"><h3 class="Title">Volunteer</h3>
                                  <h3 class="Agency">Taipei Sunrise Gifted Education Interchange Association</h3>
-                                 <h4 class="description">
+                                 <div class="description">
                                  <ul><li>Develop and instruct lecture of science education for junior high school students</li>
                                      <li>Maintain official website</li>
-                                 </ul></h4>
+                                 </ul></div>
             </div>
             <div class="grid_5 omega"><h3 class="duration">Jun 2011—Present</h3></div>
           </div>
