--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
+  <meta property="og:title" content="Ivonne Chen - 陳佳妤" >
+  <meta property="og:type" content="website" >
+  <meta property="og:url" content="http://icily.github.io/wp2014s_hw2" >
+  <meta property="og:image" content="http://icily.github.io/wp2014s_hw2/img/profile.jpg" >
+
+
   <title>Ivonne Chen</title>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
