--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta property="og:type" content="website" >
   <meta property="og:url" content="http://icily.github.io/wp2014s_hw2" >
   <meta property="og:image" content="http://icily.github.io/wp2014s_hw2/img/profile.jpg" >
+  <meta property="og:description" content="I'm Ivonne Chen. Feel free to contact me! :)">
 
 
   <title>Ivonne Chen</title>
