--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 </head>
   
 <body> 
+  <div id="fb-root"></div>
+  <script>
+    (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&appId=1607480219477262&version=v2.0";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+  </script>
   
   <!-- Header -->
   <header>
@@ -53,6 +63,7 @@
            <a href="contact.html">Contact Me Now</a>
           </div>
         </div>
+        <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
     </article>
     </div>
         
